[gd_scene load_steps=4 format=3 uid="uid://s5aa8f44yeb7"]

[ext_resource type="Script" uid="uid://cdhv6vv112vmv" path="res://scripts/globals/InventoryUI.gd" id="1_csxqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mptqw"]
bg_color = Color(0.162867, 0.367428, 0.173321, 0.941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.00298048, 0.20868, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljtta"]
bg_color = Color(0, 0, 0, 1)

[node name="InventoryUI" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_csxqe")

[node name="Panel" type="Panel" parent="."]
offset_left = 100.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mptqw")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 17.0
offset_right = -22.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Inventory"

[node name="Spacer" type="Control" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="ItemInfoPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 520.0
offset_top = 100.0
offset_right = 720.0
offset_bottom = 250.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljtta")

[node name="VBox" type="VBoxContainer" parent="Panel/ItemInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 5

[node name="ItemName" type="Label" parent="Panel/ItemInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="Quantity" type="Label" parent="Panel/ItemInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Description" type="Label" parent="Panel/ItemInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
